urlgrabber (3.1.0-5) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * Homepage field added
  * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)

  [ Sandro Tosi ]
  * debian/control
    - switch Vcs-Browser field to viewsvn

 -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200

urlgrabber (3.1.0-4) unstable; urgency=low

  * Patch to have urlgrabber.keepalive.HTTPHandler use Request.get_method() to
    determine the appropriate HTTP method. Thanks to Jakub Wilk.
    Closes: #433724
  * Changed maintainer e-mail to reflect new Debian account.
  * Added dpatch as Build-Depends to debian/control.

 -- Kevin Coyner <kcoyner@debian.org>  Sat, 04 Aug 2007 21:52:14 -0400

urlgrabber (3.1.0-3) unstable; urgency=low

  * debian/control: Added python modules packaging team to uploaders and added
    VCS fields.

 -- Kevin Coyner <kevin@rustybear.com>  Mon, 09 Apr 2007 19:27:36 -0600

urlgrabber (3.1.0-2) unstable; urgency=low

  * debian/control: Changed "Architecture: any" to all.

 -- Kevin Coyner <kevin@rustybear.com>  Mon, 09 Apr 2007 15:20:02 -0600

urlgrabber (3.1.0-1) unstable; urgency=low

  * New upstream release.
  * New maintainer. (Closes: #418095)
  * Added man page.
  * Cleaned up cruft in debian/rules.
  * Rewrote debian/copyright.
  * Cleaned up debian/control and added homepage.
  * Added debian/README.Debian.
  * Added debian/postinst to clean up unneeded docs that were inappropriately
    added in previous versions.
  * Removed unneeded debian/pycompat file.

 -- Kevin Coyner <kevin@rustybear.com>  Fri, 06 Apr 2007 22:27:03 -0400

urlgrabber (2.9.9-1) unstable; urgency=low

  * New upstream release
  * Apply Ana Beatriz Guerrero Lopez's patch to
    * Update to new Python policy (Closes: #373402)
    * Switch to standards version 3.7.2
    * Update to debhelper compat level 5
  * Thanks Ana!

 -- Anand Kumria <wildfire@progsoc.org>  Thu,  6 Jul 2006 09:16:37 +1000

urlgrabber (2.9.7-2) unstable; urgency=low
